scrollbars fixed on Chrome, Safari, Edge and Ffx

--- a/frontend/css/general.css
+++ b/frontend/css/general.css
@@ -10,15 +10,14 @@
     --menu-bar-height: 100px;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-html::-webkit-scrollbar {
+/* Hide scrollbar for Chrome, Safari and Edge */
+::-webkit-scrollbar {
     display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-html {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+/* Hide scrollbar for Firefox */
+html, div, span {
+    scrollbar-width: none;
 }
 
 @font-face {
